# velora

./: .gitignore  Cargo.toml  README.md  README_AI_FIRST.md  README_GROK.md  STATUS.md  astro.config.mjs  debug_preprocess.vel  demo_ai_first.vel  demo_finale.vel  example_ai.vel  generated.vel  index.html  package.json  self.vel  setup_dgx_model.sh  setup_grok.sh  showcase.vel  test_debug.vel  test_fn.vel  test_grok.vel  test_grok_advanced.vel  test_nemotron.sh  test_simple_ai.vel  vllm_server.py  wrangler.json
public/: velora.d.ts  velora_bg.wasm
src/: ai.rs  ast.rs  error.rs  interpreter.rs  lib.rs  lsp.rs  main.rs  package.rs  parser.rs  velora.pest  vllm_ai.rs
src/ai/: ai_ollama.rs  ai_retry.rs  ai_templates.rs  grok.rs  template_cache.rs
src/pages/: docs.astro  index.astro  playground.astro
www/: index.html  velora.js  velora_bg.wasm.d.ts
www/docs/: index.html
www/playground/: index.html
