[package]
name = "velora"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
wasm-bindgen = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
toml = "0.8"
